# paddleONNXOCR

./: .dockerignore  .gitignore  Dockerfile  README.md  conf.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  run.sh
api/: __init__.py  logger.py  models.py  ocr_services.py
paddleONNXOCR/: __init__.py  file_download.py  image_loader.py  image_rotate.py  models_enum.py  utils.py
paddleONNXOCR/predict/: ocr_dataclass.py  predict_base.py  predict_cls.py  predict_det.py  predict_doc_cls.py  predict_layout.py  predict_rec.py  predict_system.py  predict_table  predict_table_cell.py  predict_table_cls.py  predict_table_html.py  predict_uvdoc.py
